fix toolbar alignment

--- a/src/renderer/components.css
+++ b/src/renderer/components.css
@@ -70,7 +70,7 @@
 }
 
 @utility toolbar {
-  @apply flex gap-1 p-1 items-stretch;
+  @apply flex gap-1 p-1 items-center;
 }
 
 @utility button-group {
